--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.flyway.baseline-on-migrate=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+spring.web.resources.static-locations=classpath:/static/,file:src/main/resources/static/ file.upload-dir=src/main/resources/static/uploads
