--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.flyway.baseline-on-migrate=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.web.resources.static-locations=classpath:/static/,file:src/main/resources/static/ file.upload-dir=src/main/resources/static/uploads
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=pablodefutdraft@gmail.com spring.mail.password=iojaspztuegpdbxr
+spring.mail.properties.mail.smtp.auth=true spring.mail.properties.mail.smtp.starttls.enable=true
