--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,20 @@ spring.flyway.baseline-on-migrate=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.web.resources.static-locations=classpath:/static/,file:src/main/resources/static/ file.upload-dir=src/main/resources/static/uploads
+
+
+#Debug
+logging.level.org.springframework=DEBUG
+logging.level.com.example.desafio_profesional_back=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jackson.deserialization.fail-on-unknown-properties=false
+
+# Configuración de correo
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=pablodefutdraft@gmail.com spring.mail.password=iojaspztuegpdbxr
+spring.mail.username=pablodefutdraft@gmail.com 
+spring.mail.password=iojaspztuegpdbxr
 spring.mail.properties.mail.smtp.auth=true spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
